[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/starBar.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/StatFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/squareOutline.png" type="Texture" id=3]
[ext_resource path="res://Units/UnitOverlay.gd" type="Script" id=4]
[ext_resource path="res://assets/Fonts/smallerDescFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Misc/CoinLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Icons/Icon.tscn" type="PackedScene" id=7]
[ext_resource path="res://Icons/TribeIcon.gd" type="Script" id=8]
[ext_resource path="res://Icons/ClasIcon.gd" type="Script" id=9]

[node name="UnitOverlay" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 4 )

[node name="ClasIcon" parent="." instance=ExtResource( 7 )]
margin_left = 2.66667
margin_top = 16.0
margin_right = 34.6667
margin_bottom = 48.0
rect_scale = Vector2( 0.55, 0.55 )
script = ExtResource( 9 )

[node name="TribeIcon" parent="." instance=ExtResource( 7 )]
margin_left = -20.0
margin_top = 16.0
margin_right = 12.0
margin_bottom = 48.0
rect_scale = Vector2( 0.55, 0.55 )
script = ExtResource( 8 )

[node name="Frame" type="Sprite" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -32.0
margin_top = -66.6667
margin_right = 48.0
margin_bottom = 16.3333
rect_scale = Vector2( 0.8, 1 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatBar" type="Sprite" parent="."]
position = Vector2( 1.19209e-07, 10 )
scale = Vector2( 1.14062, 1.14062 )
texture = ExtResource( 1 )

[node name="Attack" type="Label" parent="StatBar"]
margin_left = -26.0
margin_top = -12.0
margin_right = 6.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 11.9725, 10.2466 )
custom_fonts/font = ExtResource( 2 )
text = "12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="StatBar"]
margin_left = -2.33791
margin_top = -12.274
margin_right = 29.6621
margin_bottom = 7.72596
rect_pivot_offset = Vector2( 24.953, 10.1323 )
custom_fonts/font = ExtResource( 2 )
text = "34"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aPos" type="Position2D" parent="StatBar"]
position = Vector2( -11.6895, -1.75343 )

[node name="hPos" type="Position2D" parent="StatBar"]
position = Vector2( 10.5206, -1.75343 )

[node name="TribeLabel" type="Label" parent="."]
visible = false
margin_left = -41.3333
margin_top = 14.6667
margin_right = -1.33333
margin_bottom = 30.6667
custom_fonts/font = ExtResource( 5 )
text = "tribe"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClasLabel" type="Label" parent="."]
visible = false
margin_left = 1.33333
margin_top = 14.6667
margin_right = 41.3333
margin_bottom = 30.6667
custom_fonts/font = ExtResource( 5 )
text = "clas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinLabel" parent="." instance=ExtResource( 6 )]
margin_left = -10.6667
margin_top = 48.0
margin_right = -10.6667
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
